--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -21,15 +21,16 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: pullRepo
-        run: git pull
+      - name: Repository Prerequisites
+        run: |
+          git pull
+          git git submodule update --init --recursive
       # Runs a single command using the runners shell
       - name: install requirements
         run: |
-          echo install requirements
           pip3 install -r requirements.txt
       # Runs a set of commands using the runners shell
       - name: publish
         run: |
-          echo publish
           bash publish.sh
+    
