--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ name: Publish
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main , gh-pages]
+    branches: [ main ]
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Repository Prerequisites
         run: |
+          git checkout main
           git pull
           git git submodule update --init --recursive
       # Runs a single command using the runners shell
