remove the bad file's

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           git checkout main
           git pull
-          git submodule update --init --recursive
       # Runs a single command using the runners shell
       - name: install requirements
         run: |
@@ -33,4 +32,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: publish
         run: |
-          bash publish.sh
+          make github
