--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,8 @@ jobs:
       - name: publish
         run: |
           make github
+          git checkout main
           git config --global user.name publish
           git config --global user.email <>
-          git add -A;git commit -m "publish"
+          git commit -am "publish"
           git push origin main
